<resources>
    <string name="app_name">必中幸运飞艇全能计划</string>
    <!-- main -->
    <string name="main_1">排行榜</string>
    <string name="main_2">全部计划</string>
    <string name="main_3">我的</string>
    <string name="main_4">开奖查看</string>
    <string name="main_5">用户中心</string>
    <!-- loading -->
    <string name="warning">选择上方彩种，点击选项进入相应列表</string>
    <string name="loading_normal">请稍候&#8230;</string>
    <string name="loading_more_normal">正在加载&#8230;</string>
    <string name="exit_by_back_again">再次点击返回键退出程序！</string>
    <string name="errcode_network_data">数据有误</string>
    <string name="errcode_network_unavailable">网络错误，请稍后重试</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="update">1.修复已知BUG\n2.优化界面\n3.升级用户体验\n4.如有疑问请咨询软件客服</string>
    <string name="checkup">检测到新版本立即更新?</string>
    <string name="ensure_up">升级</string>
</resources>
