<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5.0dip"
    android:layout_marginRight="5.0dip"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_update"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/pic_close"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/checkup"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:layout_above="@+id/tv_msg"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:textColor="#666"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_corner"
                android:text="@string/ensure_up"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                 />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>