<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_divider"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:drawablePadding="@dimen/dp_3"
                android:drawableTop="@drawable/icon_main_1"
                android:text="@string/main_1"
                android:textColor="@color/bottom_item_text_selector"
                android:textSize="@dimen/text_size_11"
                tools:ignore="SpUsage" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/icon_main_2"
                android:text="@string/main_2"
                android:textColor="@color/bottom_item_text_selector"
                android:textSize="@dimen/text_size_11" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:drawablePadding="1dp"
                android:drawableTop="@drawable/icon_main_3"
                android:text="@string/main_3"
                android:textColor="@color/bottom_item_text_selector"
                android:textSize="@dimen/text_size_11"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>